--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.1",
     "@supabase/supabase-js": "^2.19.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
@@ -20,6 +23,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-button": "^0.7.2",
     "react-type-animation": "^3.0.1",
     "swiper": "^9.2.2",
     "tailwindcss": "3.3.1"
