--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@supabase/supabase-js": "^2.19.0",
     "autoprefixer": "10.4.14",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
+    "react-toastify": "^9.1.2",
     "react-type-animation": "^3.0.1",
     "swiper": "^9.2.2",
     "tailwindcss": "3.3.1"
