--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@supabase/supabase-js": "^2.19.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
-    "next": "13.3.0",
+    "next": "^13.3.0",
     "nookies": "^2.5.2",
     "postcss": "8.4.21",
     "react": "18.2.0",
@@ -27,6 +29,7 @@
     "react-google-button": "^0.7.2",
     "react-toastify": "^9.1.2",
     "react-type-animation": "^3.0.1",
+    "stripe": "^12.2.0",
     "swiper": "^9.2.2",
     "tailwindcss": "3.3.1"
   }
