--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^1.52.1",
     "@supabase/supabase-js": "^2.19.0",
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.2.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^9.19.1",
@@ -26,6 +27,7 @@
     "nookies": "^2.5.2",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
     "react-toastify": "^9.1.2",
