--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@supabase/supabase-js": "^2.19.0",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.2.3",
     "eslint": "8.38.0",
@@ -32,6 +33,7 @@
     "react-google-button": "^0.7.2",
     "react-toastify": "^9.1.2",
     "react-type-animation": "^3.0.1",
+    "sharp": "^0.32.1",
     "stripe": "^12.2.0",
     "swiper": "^9.2.2",
     "tailwindcss": "3.3.1"
